Fixed text overflow

--- a/SASS/_media-queries.scss
+++ b/SASS/_media-queries.scss
@@ -21,7 +21,7 @@
                     width: 25%;
                     .time{
                         font-size: 25px;
-                        height: 40px;
+                        height: auto;
                     }
                 }
                 .name{
@@ -29,7 +29,7 @@
                     width: 65vw;
                     .task-name{
                         font-size: 25px;
-                        height: 40px;
+                        height: auto;
                     }
                 }
                 .btn-container{
@@ -47,7 +47,7 @@
                     width: 25%;
                     .time{
                         font-size: 25px;
-                        height: 40px;
+                        height: auto;
                     }
                 }
                 .name{
@@ -56,7 +56,7 @@
                     width: 65%;
                     .task-name{
                         font-size: 25px;
-                        height: 40px;
+                        height: auto;
                     }
                 }
                 .btn-container{
@@ -91,7 +91,7 @@
                 padding-left:15px;
                 width: 20%; 
                 .time{
-                    height: 30px;
+                    height: auto;
                     font-size: 20px;
                 }
             }
@@ -113,7 +113,7 @@
                     width: 25%; 
                     padding-left:20px;
                     .time{
-                        height: 1.5em;
+                        height: auto;
                         font-size: 20px;
                         width: 100%;
                     }
@@ -121,7 +121,7 @@
                 .name{
                     width: 50%;
                     .task-name{            
-                        height: 1.5em;
+                        height: auto;
                         font-size: 20px;
                         width: 100%;
                     }
@@ -153,7 +153,7 @@
                 padding-left: 5px;
                 width: 25%; 
                 .time{
-                    height: 20px;
+                    height: auto;
                     font-size: 10px;
                 }
             }
@@ -161,7 +161,7 @@
                 width: 45%;
                 .task-name{
                     font-size: 10px;           
-                    height: 20px;
+                    height: auto;
                 }
             }
             .btn-container{
@@ -181,7 +181,7 @@
                     padding-left:5px;
                     .time{
                         font-size: 10px;
-                        height: 1rem;
+                        height: auto;
                         width: 100%;
                     }
                 }
@@ -189,7 +189,7 @@
                     width: 50%;
                     .task-name{  
                         font-size: 10px;          
-                        height: 1rem;
+                        height: auto;
                         width: 100%;
                     }
                 }
